<resources>
    <string name="app_name">TicTacToe App</string>
    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="create_game_path">/</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">gjF9ebA3Ix</string>
    <string name="tre_pa_rad_logo">Tre på rad logo</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <string name="player_name">Player name</string>
    <string name="game_id">Game ID</string>
    <string name="playerturns">Player Turn Text</string>
    <string name="player_1">Player 1: X</string>
    <string name="player_2">Player 2: O</string>
    <string name="cpu">Player vs CPU</string>
</resources>