<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playerturns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerturns"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="25dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/one"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="btnEvent"
                    android:text=""
                    android:textSize="34sp" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/three"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/four"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/five"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/six"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/eight"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>

                <Button
                    android:id="@+id/nine"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_margin="4dp"
                    android:onClick="btnEvent"
                    android:textSize="34sp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textSize="18sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>